qt/gen_qgraphicseffect.h

typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
QGraphicsEffect* QGraphicsEffect_new();
QGraphicsEffect* QGraphicsEffect_new2(QObject* parent);
QMetaObject* QGraphicsEffect_metaObject(const QGraphicsEffect* self);
void* QGraphicsEffect_metacast(QGraphicsEffect* self, const char* param1);
int QGraphicsEffect_metacall(QGraphicsEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsEffect_tr(const char* s);
struct miqt_string QGraphicsEffect_trUtf8(const char* s);
QRectF* QGraphicsEffect_boundingRectFor(const QGraphicsEffect* self, QRectF* sourceRect);
QRectF* QGraphicsEffect_boundingRect(const QGraphicsEffect* self);
bool QGraphicsEffect_isEnabled(const QGraphicsEffect* self);
void QGraphicsEffect_setEnabled(QGraphicsEffect* self, bool enable);
void QGraphicsEffect_update(QGraphicsEffect* self);
void QGraphicsEffect_enabledChanged(QGraphicsEffect* self, bool enabled);
void QGraphicsEffect_connect_enabledChanged(QGraphicsEffect* self, intptr_t slot);
struct miqt_string QGraphicsEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsEffect_trUtf83(const char* s, const char* c, int n);
bool QGraphicsEffect_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsEffect_virtualbase_metaObject(const void* self);
bool QGraphicsEffect_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsEffect_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsEffect_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsEffect_override_virtual_boundingRectFor(void* self, intptr_t slot);
QRectF* QGraphicsEffect_virtualbase_boundingRectFor(const void* self, QRectF* sourceRect);
bool QGraphicsEffect_override_virtual_draw(void* self, intptr_t slot);
bool QGraphicsEffect_override_virtual_sourceChanged(void* self, intptr_t slot);
void QGraphicsEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsEffect_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsEffect_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsEffect_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsEffect_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsEffect_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsEffect_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsEffect_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsEffect_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsEffect_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsEffect_staticMetaObject();
void QGraphicsEffect_delete(QGraphicsEffect* self);
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new();
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new2(QObject* parent);
QMetaObject* QGraphicsColorizeEffect_metaObject(const QGraphicsColorizeEffect* self);
void* QGraphicsColorizeEffect_metacast(QGraphicsColorizeEffect* self, const char* param1);
int QGraphicsColorizeEffect_metacall(QGraphicsColorizeEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsColorizeEffect_tr(const char* s);
struct miqt_string QGraphicsColorizeEffect_trUtf8(const char* s);
QColor* QGraphicsColorizeEffect_color(const QGraphicsColorizeEffect* self);
double QGraphicsColorizeEffect_strength(const QGraphicsColorizeEffect* self);
void QGraphicsColorizeEffect_setColor(QGraphicsColorizeEffect* self, QColor* c);
void QGraphicsColorizeEffect_setStrength(QGraphicsColorizeEffect* self, double strength);
void QGraphicsColorizeEffect_colorChanged(QGraphicsColorizeEffect* self, QColor* color);
void QGraphicsColorizeEffect_connect_colorChanged(QGraphicsColorizeEffect* self, intptr_t slot);
void QGraphicsColorizeEffect_strengthChanged(QGraphicsColorizeEffect* self, double strength);
void QGraphicsColorizeEffect_connect_strengthChanged(QGraphicsColorizeEffect* self, intptr_t slot);
struct miqt_string QGraphicsColorizeEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsColorizeEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsColorizeEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsColorizeEffect_trUtf83(const char* s, const char* c, int n);
bool QGraphicsColorizeEffect_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsColorizeEffect_virtualbase_metaObject(const void* self);
bool QGraphicsColorizeEffect_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsColorizeEffect_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsColorizeEffect_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsColorizeEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsColorizeEffect_override_virtual_draw(void* self, intptr_t slot);
void QGraphicsColorizeEffect_virtualbase_draw(void* self, QPainter* painter);
bool QGraphicsColorizeEffect_override_virtual_boundingRectFor(void* self, intptr_t slot);
QRectF* QGraphicsColorizeEffect_virtualbase_boundingRectFor(const void* self, QRectF* sourceRect);
bool QGraphicsColorizeEffect_override_virtual_sourceChanged(void* self, intptr_t slot);
void QGraphicsColorizeEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsColorizeEffect_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsColorizeEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsColorizeEffect_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsColorizeEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsColorizeEffect_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsColorizeEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsColorizeEffect_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsColorizeEffect_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsColorizeEffect_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsColorizeEffect_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsColorizeEffect_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsColorizeEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QGraphicsColorizeEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);